# agent-cli

./: README.md  pyproject.toml
src/agent_cli/: __init__.py  cli.py  main.py
