[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-cli"
version = "0.1.0"
description = "Interactive Agent CLI for batch execution"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "asyncio",
    "requests",
    "pyyaml",
    "python-dotenv",
    "pydantic>=2.0.0",
    "prompt_toolkit",
    "rich",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/agent-cli"
"Bug Tracker" = "https://github.com/yourusername/agent-cli/issues"

[project.scripts]
acomp = "agent_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_cli"]